# AlgorithmPractice

./: .gitignore  AlgorithmProject.sln  AlgorithmTheory.txt  LinuxStudy.cc
AZ100/medium/: btree_add_template.cc  note.txt  out.txt  remaining_time
AZ100/medium/11_connect_node_at_same_leve/: main.cc
AZ100/medium/12_construct_binary_tree_from_given_parent_array/: main.cc
AZ100/medium/13_program_convert_number_to_words/: main.cc
AZ100/medium/15_delete_node_has_greater_value_on_right_side/: main.cc
AZ100/medium/17_detect_and_remove_loop_in_linked_list/: 1  main.cc
AZ100/medium/1_A_program_check_bst/: main.cc
AZ100/medium/20_diagonal_traverse_of_tree/: main.cc
AZ100/medium/23_box_stacking/: 1  out.txt
AZ100/medium/24_longest_increasing_subsequence/: 1  main.cc
AZ100/medium/25_1_longest_common_subsequence/: main.cc
AZ100/medium/25_optimal_strategy_for_game/: main.cc
AZ100/medium/26_edit_distance/: main.cc
AZ100/medium/27_find_a_pair_with_given_sum/: main.cc
AZ100/medium/28_find_circular_tour/: main.cc
AZ100/medium/29_1_lowest_common_ancestor/: main.cc
AZ100/medium/2_Add_all_greater_values_to_every_node_in_BST/: main.cc
AlgorithmProject/: AlgorithmProject.vcxproj  AlgorithmProject.vcxproj.filters
BasicDataStructure/Hash/: 1  hash.cc  range_search_hash.cc
BasicDataStructure/heap/: heap.cc
BasicDataStructure/median/: md.cc
BasicDataStructure/numbers/: main.cc
BasicDataStructure/tree/: main.cc  trie.cc
C++Reminder/: array.cc  cast  cast.cc  class_definition.cc  class_template.cc  exception_handling.cc  file.txt  fileStream.cc  file_operation.cc  friend.cc  lambda.cc  out.txt  todo  unique_ptr_advanced.cc
C++Reminder/design_patterns/: 1  factory.cc
C++Reminder/stl/: list.cc  map.cc  priority_queue.cc  queue.cc  vector.cc
Daily/: memozzang
DynamicProgramming/CPUScheduling/: cpu.cc
DynamicProgramming/Coefficient/: coeff.cc
DynamicProgramming/Fibonacci/: fibo.cc  fibo_201706.cc
DynamicProgramming/FindPath/: path.cc
DynamicProgramming/FireStation/: firetruck.cc  input.txt
DynamicProgramming/InvestCompanies/: invest.cc
DynamicProgramming/KMP/: kmp.cc
DynamicProgramming/LateAbsentCheck/: late.cc
DynamicProgramming/LongestIncreasingSubsequence/: 1  lcs.cc  lcs_simple.cc
DynamicProgramming/LongestSubstring/: ls.cc
DynamicProgramming/MonkeyWannaHourse/: monkey.cc
DynamicProgramming/N-Puzzle/: out.txt
DynamicProgramming/Palindrome/: longestPalindrom.cc  longestPalindromNative.cc  minPalindrom.cc
DynamicProgramming/Parenthesis/: paran.cc
DynamicProgramming/Postman/: post_delivery.cc
DynamicProgramming/RetangleDivider/: rec3.cc  rec_divider.cc
DynamicProgramming/Stamping/: stamp.cc
DynamicProgramming/StickerTearing/: sticker.cc
DynamicProgramming/Tile/: tile.cc
DynamicProgramming/TravelingSalesman/: travel.cc
DynamicProgramming/TwoTanks/: input.txt  twotanks.cc
Etc/: detect_overlap.cc  detect_square.cc  finding_missing_number.cc  k_th_largest_element.cpp
Graph/N-Puzzle/: n-puzzle.cc  n-puzzle2.cc
Graph/PathFinder/: path.cc
Master/: summary.txt  whatneedtodo.txt
SystemDesign/1G1M/: .m.cc.swp  1  1g1m.cc  m.cc  main.cc  memory_manager.cc  out.txt  sub_0.txt  sub_1.txt  sub_10.txt  sub_100.txt  sub_1000.txt  sub_1001.txt  sub_1002.txt  sub_1003.txt  sub_1004.txt  sub_1005.txt  sub_1006.txt  sub_1007.txt  sub_1008.txt  sub_1009.txt  sub_101.txt  sub_1010.txt  sub_1011.txt  sub_1012.txt  sub_1013.txt  sub_1014.txt  sub_1015.txt  sub_1016.txt  sub_1017.txt  sub_1018.txt  sub_1019.txt  sub_102.txt  sub_1020.txt  sub_1021.txt  sub_1022.txt  sub_1023.txt  sub_103.txt  sub_104.txt  sub_105.txt  (+993 more)
SystemDesign/crawler/: webcrawler.cc  webcrawler_detail.cc
SystemDesign/graphics_subsystem/: design
SystemDesign/memoryallocator/: mm.cc  test.cc
SystemDesign/producerConsumer/: main.cc
SystemDesign/scheduler/: main.cc  scheduler.cc  scheduler.h
SystemDesign/shell/: shell.cc
SystemDesign/smartpointer/: smartpointer.cc
UnderstandingComputers/: boot.txt  ddr_to_double_up.txt  how_bitmaps_save.txt  how_cpu_add.txt  how_cpu_moves_data.txt  how_cpu_works.txt  how_file_compression_works.txt  how_flash_works.txt  how_hdd_works.txt  how_key_press_works.txt  transistor.txt  writing_to_ram.txt
VinceOS/v0.1/src/kernel/initializer/: CMakeCache.txt  CMakeLists.txt  Makefile  Process.cc  Process.h  cmake_install.cmake  main.cc
VinceOS/v0.1/src/kernel/utility/: CMakeLists.txt  timestamp.c  timestamp.h  timestamper.cc  timestamper.h
VinceOSFromDarkStar3/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  darkstar3  darkstar3.pc  install_manifest.txt  log4crc  pkgconfig-template.pc.in  tags
VinceOSFromDarkStar3/doc/: Idea.txt  what_to_provides.txt
VinceOSFromDarkStar3/include/: .rdb.h.swp  queue.h  rdb.h  rdb.h~
VinceOSFromDarkStar3/packaging/: darkstar3.spec
VinceOSFromDarkStar3/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  test
VinceOSFromDarkStar3/src/app_launcher/: CMakeCache.txt  Makefile  app_launcher_daemon.c  app_launcher_daemon.c~  cmake_install.cmake
VinceOSFromDarkStar3/src/launcher/: launcher.c
VinceOSFromDarkStar3/src/queue/: circular_queue_array.c
VinceOSFromDarkStar3/src/redblacktree/: .rdb.c.swo  .rdb.c.swp  rdb.c
VinceOSFromDarkStar3/src/system_controller/: .system_server.c.swp  CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  system_server.c  system_server.c~  system_server_client_main.c
x64/Debug/: AlgorithmProject.ilk  listGraphProject.ilk
(+113 files in other folders)
