cmake_minimum_required(VERSION 2.8.8)
project(vinceos)
find_package(Threads)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(TARGET_LIB_NAME "vinceos")
set(TARGET_EXEC_NAME "vinceos")
include_directories("${PROJECT_SOURCE_DIR}")
link_directories("../../kernel/utility") 
add_executable(${TARGET_EXEC_NAME} ${PROJECT_SOURCE_DIR}/main.cc ${PROJECT_SOURCE_DIR}/Process.cc)
ADD_DEFINITIONS("-pthread")
ADD_DEFINITIONS("-lpthread")
target_link_libraries(${TARGET_EXEC_NAME} "libtimestamper.so" ${CMAKE_THREAD_LIBS_INIT})

#add_library(${TARGET_LIB_NAME} SHARED ${PROJECT_SOURCE_DIR}/main.cc ${PROJECT_SOURCE_DIR}/Process.cc)
#SET_TARGET_PROPERTIES(${TARGET_LIB_NAME} PROPERTIES COMPILE_FLAGS -fPIC)
